--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>Өнөбаяр</title>
     </head>
     <body>
+        <div class="usreh" style="background-color: blueviolet;">
+            <button>change dice-game</button>
+        </div>
         
         <div class="top">
             <div class="budget">
